fix: regenerate spec
